Tweak slide reveals

--- a/include/shared.tex
+++ b/include/shared.tex
@@ -12,6 +12,15 @@
 }
 \urlstyle{same}
 
+% Piece-wise uncovering of elements in TikZ pictures
+\tikzset{
+  invisible/.style={opacity=0},
+  visible on/.style={alt={#1{}{invisible}}},
+  alt/.code args={<#1>#2#3}{%
+    \alt<#1>{\pgfkeysalso{#2}}{\pgfkeysalso{#3}} % \pgfkeysalso doesn't change the path
+  },
+}
+
 % Default listing style
 \lstdefinestyle{default}{%
   basicstyle=\ttfamily\footnotesize,
