--- a/sections/02-tools.tex
+++ b/sections/02-tools.tex
@@ -119,6 +119,7 @@ lexer! {
   \textbf{LLVM} is a compiler infrastructure that can provide the intermediate
   and back-end phases:
 
+  \only<+->
   \begin{itemize}
     \item<+-> Defines its own SSA-based IR that it can perform all kinds of
       optimizations on
